# TestSuite

./: .gitignore  .pre-commit-config.yaml  .rubocop.yml  .travis.yml  404.html  AUTHORS.md  BuildingSync_schematron.rb  BuildingSync_schematron.xml  CHANGELOG.md  Gemfile  Gemfile-sch  README.md  Rakefile  buildingsch.py  cspell.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yaml  ci.yml  pypi_release.yml
Level Definitions/: index.html
archive/resources/: README.md  app.rb
docs/: Contributions and Schematron.md  Floor Areas.md  Level Definitions.md  Reports and Scenarios.md  Reports.md  Standard 211 - Level Implementation Details.xlsx  Systems.md  index.md
docs/examples/: hvac.md  lighting.md  premises.md
docs/stylesheets/: extra.css
examples/: README.md
examples/HVACSystems/: PSZ-AC-CDM-001.xml  PSZ-HP-CDM-001.xml  README.md  report_9655.xml
examples/PSZ Example/: ATT_report_7905.xml  PSZ Example.xml  README.md
examples/Premises/: README.md
examples/hvac/: index.html
examples/lighting/: index.html
examples/premises/: index.html
lib/: buildingElements.sch  contactElements.sch  contacts.sch  energyElements.sch  floorAreaTests.sch  floorElements.sch  measureElements.sch  occupancyElements.sch  rootElements.sch  scenarioElements.sch  sectionElements.sch  siteBuildingElements.sch
proposals/: README.md
schematron/: conftest.py
schematron/lib/: buildingElements.sch  contactElements.sch  floorElements.sch  id.sch  measureElements.sch  scenarioElements.sch  siteBuildingElements.sch
schematron/schema2.0.0/: L000_Prelim_Analysis.sch
schematron/v2.0.0/: L000_Prelim_Analysis.sch  L100_Audit.sch  v2-0-0_L000_OpenStudio_Simulation.sch  v2-0-0_L000_Prelim_Analysis.sch  v2-0-0_L100_OpenStudio_Simulation.sch  v2-0-0_SEED.sch
schematron/v2.1.0/: L000_OpenStudio_Simulation.csv  L000_OpenStudio_Simulation.sch  L000_Prelim_Analysis.csv  L000_Prelim_Analysis.sch  L100_Audit.csv  L100_Audit.sch  SEED.sch  v2-1-0_L100_Audit.sch
schematron/v2.2.0/: v2-2-0_BETTER.csv  v2-2-0_BETTER.sch  v2-2-0_BETTER_input.csv  v2-2-0_BRICR_SEED.sch  v2-2-0_L000_OpenStudio_Pre-Simulation.csv  v2-2-0_L000_OpenStudio_Pre-Simulation.sch  v2-2-0_L000_OpenStudio_Simulation.csv  v2-2-0_L000_OpenStudio_Simulation.sch  v2-2-0_L000_Prelim_Analysis.sch  v2-2-0_L100_Audit.csv  v2-2-0_L100_Audit.sch  v2-2-0_L100_OpenStudio_Pre-Simulation.csv  v2-2-0_L100_OpenStudio_Pre-Simulation.sch  v2-2-0_L100_OpenStudio_Simulation.sch  v2-2-0_L200_Audit.csv  v2-2-0_L200_Audit.sch  v2-2-0_bsyncr.csv  v2-2-0_bsyncr.sch
schematron/v2.3.0/: v2-3-0_L000_Prelim_Analysis.csv  v2-3-0_L000_Prelim_Analysis.sch  v2-3-0_L100_Audit.csv  v2-3-0_L100_OpenStudio_Pre-Simulation.sch  v2-3-0_L200_Audit.csv  v2-3-0_SEED.sch  v2-3-0_bsyncr.csv
search/: search_index.json
spec/: README.md  spec_helper.rb
spec/files/: building_L000_building_info.sch  building_main_details.sch  building_main_details_L100_audit.sch  building_simple_location_details.sch  contact_atleast_one_auditor_and_one_owner.sch  contact_name_email_phone.sch  contact_not_auditor_and_owner.sch  floor_building_section_gross_area_checks.sch  floor_dont_use.sch  floor_have_type_and_value.sch  floor_max_one_of_each_type.sch  floor_mech_type_checks.sch  floor_none_defined_warn.sch  floor_one_of_mech_type.sch  floor_one_of_type.sch  floor_type_value_or_percent.sch  ids_all.sch  (+18 more)
templates/: BuildingSync_template_L100.xml
tests/: tester.rb
testsuite/: clean_xml.py  console.py  constants.py  generate_sch.py  validate_sch.py
tools/: constants.py  generate_sch.py  validate_sch.py
(+137 files in other folders)
