[tool.poetry]
name = "testsuite"
version = "0.1.2"
description = "Example BuildingSync files and tools for writing and validating BuildingSync use cases as schematron files."
authors = ["Ted Summer <ted@devetry.com>"]
license = "BSD4"

readme = "README.md"

homepage = "https://buildingsync.net"
repository = "https://github.com/BuildingSync/TestSuite"
documentation = "https://github.com/BuildingSync/TestSuite"
keywords = ["BuildingSync", "Building Data Exchange", "Schematron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
lxml = "4.6.3"

[tool.poetry.dev-dependencies]
pytest = "5.4.3"
pytest-cov = "2.8.1"
tox = "3.14.4"
pre-commit = "^2.13.0"

[tool.poetry.scripts]
testsuite = 'testsuite.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
