[tool.poetry]
name = "testsuite"
version = "0.1.3"
description = "Example BuildingSync files and tools for writing and validating BuildingSync use cases as schematron files."
authors = ["Ted Summer <ted@devetry.com>"]
license = "BSD4"

readme = "README.md"

homepage = "https://buildingsync.net"
repository = "https://github.com/BuildingSync/TestSuite"
documentation = "https://github.com/BuildingSync/TestSuite"
keywords = ["BuildingSync", "Building Data Exchange", "Schematron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "4.9.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
pytest-cov = "4.0.0"
pre-commit = "^2.21.0"

[tool.poetry.scripts]
testsuite = 'testsuite.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
