[tool.poetry]
name = "testsuite"
version = "0.1.4"
description = "Example BuildingSync files and tools for writing and validating BuildingSync use cases as schematron files."
authors = ["Ted Summer <ted@devetry.com>", "Nicholas Long <nllong>"]
license = "BSD4"

readme = "README.md"

homepage = "https://buildingsync.net"
repository = "https://github.com/BuildingSync/TestSuite"
documentation = "https://github.com/BuildingSync/TestSuite"
keywords = ["BuildingSync", "Building Data Exchange", "Schematron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.9"
# This is the version in BAE, so let's pin to that version
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
pytest-cov = "4.0.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
testsuite = 'testsuite.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
